# qwen3-burn

./: .claude  .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pinact.yml  smoke.yml
benches/: ops.rs
examples/: chat.rs  vision_chat.rs
src/: cache.rs  gguf.rs  image.rs  lib.rs  model.rs  mrope.rs  sampling.rs  tokenizer.rs  transformer.rs  vision.rs  vision_model.rs
tests/: smoke.rs
