[package]
name = "qwen3-burn"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Qwen3 language model implementation using the Burn deep learning framework"

[features]
default = ["std"]
std = []
wgpu = ["burn/wgpu"]
ndarray = ["burn/ndarray"]
cuda = ["burn/cuda"]
bench = []
profile = ["tracing-subscriber"]

[[example]]
name = "chat"

[dependencies]
burn = { version = "0.20.0", default-features = false, features = ["std"] }
safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
rand = "0.8"
half = { version = "2.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
burn = { version = "0.20.0", default-features = false, features = ["std", "ndarray"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ops"
harness = false
